# pygfx

./: .gitattributes  .gitignore  .readthedocs.yaml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  dev-requirements.txt  linalg.py  my_patch.diff  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-vis.py  test_linalg.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  screenshots.yml
docs/: Makefile  aa.rst  advanced.rst  advanced_api.rst  advanced_shaders.rst  basics.rst  blending.rst  conf.py  dev.rst  docs_requirements.txt  effectpasses.rst  gettingstarted.rst  guide.rst  index.rst  make.bat  performance.rst  reference.rst  shaders.rst  support.rst  transparency.rst  using_pygfx_gallery_scraper.rst
docs/_static/: _pyodide_iframe.html  style.css  uharfbuzz-0.1.dev1+ga19185453-cp310-abi3-pyodide_2025_0_wasm32.whl  uharfbuzz-0.54.1-cp310-abi3-pyodide_2025_0_wasm32.whl
docs/_templates/: clean_class.rst  custom_layout.rst
examples/: HOWTO.md  README.rst  axes_helper.py  clipping_planes.py  collection_line.py  colormap_channels.py  colormap_image.py  colormap_mesh.py  cube.py  cube_qt.py  cube_wx.py  custom_object.py  custom_object1.py  custom_object2.py  custom_object3.py  cylinder.py  demo_text_contrast.py  demo_text_snake.py  depth_clipping.py  dynamic_env_map.py  env_map_cube_camera_test.py  env_map_test.py  events.py  flat_shaded_torus.py  geometry_cube.py  geometry_cube_wx.py  geometry_cubes.py  geometry_image.py  geometry_klein_bottle.py  geometry_line.py  geometry_octahedron.py  geometry_plane.py  geometry_polyhedron.py  geometry_polyhedron_sub.py  geometry_polyhedron_subdivisions.py  geometry_text.py  geometry_torus_knot.py  gltf_viewer.py  hello_text.py  hello_triangle.py  (+102 more)
examples/data/: ClearcoatWicker.glb  coastlines.npz  facecap.glb  viewer.ui
examples/feature_demo/: README.rst  animation_mixer.py  anisotropy_barn_lamp.py  aomap.py  audio_visualizer.py  blending_ordered2.py  blending_weighted_plus.py  blending_weighted_plys.py  bloom.py  bloom2.py  clearcoat.py  clearcoat2.py  colormap_channels.py  colormap_image.py  colormap_mesh.py  compare_images.py  compute_cloth.py  custom_object1.py  custom_object2.py  custom_object3.py  cylinder.py  dynamic_env_map.py  earth.py  env_maps.py  flat_shaded_torus.py  fly_controller.py  fly_controller_logo.py  geometry_cubes.py  geometry_image.py  geometry_klein_bottle.py  geometry_mobius.py  geometry_plane.py  geometry_polyhedron.py  geometry_polyhedron_subdivisions.py  geometry_torus_knot.py  gltf_animations.py  gltf_unlit.py  gltf_viewer.py  gpu_texture.py  helpers_gizmo.py  (+192 more)
examples/introductory/: README.rst  clipping_planes.py  cube.py  hello_text.py  hello_triangle.py  light_basic.py  object_bounding_box.py  offscreen.py  orbit_camera.py  plot_clipping_planes.py  plot_cube.py  plot_hello_text.py  plot_hello_triangle.py  plot_light_basic.py  plot_object_bounding_box.py  plot_offscreen.py  plot_orbit_camera.py  plot_points_basic.py  plot_show_util.py  points_basic.py  show_util.py
examples/other/: MeshQt6.py  README.rst  background_subtraction.py  collection_line.py  compare_images.py  cube_qt.py  cube_wx.py  edl_mesh.py  edl_pointcloud.py  gpu_selection.py  gui_direct.py  hirez_screenshot.py  image_histogram.py  integration_pytorch.py  integration_qt.py  light_view.py  load_open3d.py  load_open3d_mesh.py  load_open3d_pointcloud.py  mark_image_histogram.py  object_bounding_box_open3d.py  post_processing1.py  post_processing2.py  quad_mesh.py  quad_mesh_qt.py  reactive_rendering.py  sam2_point_segmentation.py  show_cpu_usage.py  sponza_scene.py  text_with_qt.py  two_canvases.py
examples/quad_test/: MeshQt6.py  e3t  viewer.ui
examples/tests/: test_examples.py  testutils.py
examples/validation/: README.rst  plot_validate_box.py  plot_validate_color.py  plot_validate_culling.py  plot_validate_depth_clipping.py  plot_validate_helpers1.py  plot_validate_helpers2.py  plot_validate_image1.py  plot_validate_image2.py  plot_validate_image_colormap.py  plot_validate_light_shadow.py  plot_validate_mesh_colormap.py  plot_validate_ndc.py  plot_validate_text_anchor.py  plot_validate_volume.py  validate_alpha.py  validate_blend_additive.py  validate_blend_bg.py  validate_blend_dither.py  validate_blend_ordered2.py  validate_blend_weighted.py  validate_blend_weightedplus.py  validate_box.py  validate_color.py  validate_culling.py  validate_depth_clipping.py  validate_depth_overlay1.py  validate_depth_overlay2.py  validate_grid.py  validate_grid1.py  validate_helpers1.py  validate_helpers2.py  validate_image.py  validate_image1.py  validate_image2.py  validate_image_colormap.py  validate_image_on_mesh.py  validate_light_shadow.py  validate_line_2d.py  validate_line_3d.py  (+37 more)
py2spirv/: __init__.py
pygfx/: __init__.py  __main__.py  _version.py  linalgtest.py  scraper.py
pygfx/__pyinstaller/: hook-pygfx.py  test_pygfx.py
pygfx/animation/: __init__.py  animation_action.py  animation_clip.py  animation_mixer.py  clock.py  interpolant.py  keyframe_track.py
pygfx/cameras/: __init__.py  _base.py  _generic.py  _orthographic.py  _perspective.py
pygfx/controllers/: __init__.py  _base.py  _fly.py  _input.py  _orbit.py  _panzoom.py  _time.py  _trackball.py
pygfx/controls/: __init__.py  _base.py  _orbit.py  _panzoom.py
pygfx/data_files/: noto_default_index.json
pygfx/datawrappers/: __init__.py  _buffer.py  _texture.py
pygfx/geometries/: __init__.py  _base.py  _box.py  _compat.py  _cone.py  _cylinder.py  _plane.py  _points.py  _polyhedron.py  _sphere.py  _text.py  _toroidal.py  utils.py
pygfx/helpers/: __init__.py  _axes.py  _box.py  _gizmo.py  _grid.py  _lights.py  _logo.py  _selection.py  _skeleton.py  _stats.py
pygfx/linalg/: __init__.py  cylindrical.py  matrix3.py  matrix4.py  (+4 more)
quad_test/: e4q  nodes  viewer.ui
scripts/: Dockerfile  container.py
tests/: test_basics.py  test_data.py  test_examples.py  test_linalg.py  testutils.py  threeground.html
visvis2/: __init__.py  _figure.py  _geometry.py  _renderer.py  _wrappers.py  linalg.py
wgpu/: utils.py
(+337 files in other folders)
