# ===== Project info

[project]
dynamic = ["version"]
name = "pygfx"
description = "Powerful and versatile visualization for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Almar Klein" }, { name = "Korijn van Golen" }]
keywords = [
    "render-engine",
    "graphics",
    "3d",
    "science",
    "visualization ",
    "webgpu",
    "wgpu",
]
requires-python = ">= 3.10"
dependencies = [
    "rendercanvas >= 2",
    "wgpu >=0.19.0,<0.23.0",
    "pylinalg >=0.6.7,<0.7.0",
    "numpy",
    "freetype-py",
    "uharfbuzz",
    "jinja2",
    "hsluv >=5.0.0,<6.0.0",
]

[project.optional-dependencies]
lint = ["ruff"]
examples = [
    "pytest",
    "imageio[pyav]",
    "scikit-image",
    "trimesh <4.6",
    "gltflib",
    "imgui-bundle>=1.2.1",
    "httpx",
]
docs = [
    "sphinx>7.2",
    "sphinx_rtd_theme",
    "sphinx-gallery",
    "matplotlib",
    # Duplicate from 'examples'
    "imageio[pyav]",
    "scikit-image",
    "trimesh <4.6",
    "gltflib",
    "imgui-bundle>=1.6.0",
    "httpx",
]
tests = ["pytest", "psutil", "trimesh <4.6", "httpx", "gltflib", "imageio"]
dev = ["pygfx[lint,tests,examples,docs]"]

[project.entry-points."pyinstaller40"]
hook-dirs = "pygfx.__pyinstaller:get_hook_dirs"
tests = "pygfx.__pyinstaller:get_test_dirs"

[project.urls]
Homepage = "https://pygfx.org"
Documentation = "https://docs.pygfx.org"
Repository = "https://github.com/pygfx/pygfx"

# ===== Building

# Flit is great solution for simple pure-Python projects.
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ===== Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF", "TC"]
ignore = [
    "E501",   # Line too long
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "B019",   # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`"
]
